[package]
authors = ["konstin <konstin@mailbox.org>"]
name = "nightly_regression"
version = "0.1.0"

[lib]
# Setting an explicit crate type makes no difference
#crate-type = ["dylib"]
#crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.5"

[dependencies.nightly_regression_derive]
path = "nightly_regression_derive"

